--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@
       align-items: center;
       height: 80vh;
       text-align: center;
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://via.placeholder.com/1500x800') no-repeat center/cover;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('favicon.png') no-repeat center/cover;
+      background-position: center -1000px;
       color: var(--light);
     }
 
